# Motif

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  start.sh
backend/: config.py  main.py  pyproject.toml
backend/agent/: callbacks.py  motif_agent.py  prompts.py  tools.py
backend/animation/: generator.py  library.py  router.py  state_generator.py  state_machine.py
backend/character/: context.py  creator.py
backend/data/: sessions.db
backend/data/characters/0413b6d1-86b5-4a74-b93f-c7d56db2b8f7/: chat_history.json  memory.md  meta.json  states.json  unlocked_states.json
backend/data/characters/0413b6d1-86b5-4a74-b93f-c7d56db2b8f7/animations/: animations.json
backend/storage/: firestore.py  gcs.py  local.py
backend/tts/: chirp.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: animation-player.js  audio-player.js  character-creator.js  chat-ui.js  gallery.js  home.js  main.js  ws.js
frontend/styles/: main.css
scripts/: deploy.sh  generate_seed_animations.py  migrate_to_multi_character.py  process_video.sh
